--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@master
       - name: WordPress Plugin Deploy
         run: ../deploy.sh
+        shell: bash
         env:
           SVN_PASSWORD: "=> PASSWORD"
           SVN_USERNAME: "=> USERNAME"
