--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -5,13 +5,15 @@ on:
       - master
 jobs:
   tag:
-    name: Uploader...
+    name: LOLO Job
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: WordPress Plugin Deploy
-        run: ahmadhaseeb4/plugin-deployer@stable
+      - name: WordPress Plugin Deploy (hehe)
+        uses: ahmadhaseeb4/plugin-deployer@stable
         env:
           SVN_PASSWORD: "=> PASSWORD"
           SVN_USERNAME: "=> USERNAME"
           SVN_URL: "=> SVN URL"
+
+
