--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -15,5 +15,6 @@ jobs:
           SVN_PASSWORD: "12345678aA"
           SVN_USERNAME: "muhammad007"
           URL: "https://james-bond.unfuddle.com/svn/james-bond_repo/"
+          SLUG: "tester"
 
 
