--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: WordPress Plugin Deploy (hehe)
+      - name: WordPress Plugin Deploy
         uses: ahmadhaseeb4/plugin-deployer@stable
         env:
           URL: "https://james-bond.unfuddle.com/svn/james-bond_ae/"
