--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   tag:
-    name: LOLO Job
+    name: My Job
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
