--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -13,6 +13,6 @@ jobs:
       - name: WordPress Plugin Deploy
         uses: ahmadhaseeb4/plugin-deployer@stable
         env:
-          URL: "https://james-bond.unfuddle.com/svn/james-bond_af/"
+          URL: "https://james-bond.unfuddle.com/svn/james-bond_ag/"
           SVN_USERNAME: "muhammad007"
           SVN_PASSWORD: "12345678aA"
