--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -14,7 +14,7 @@ jobs:
       - name: WordPress Plugin Deploy
         uses: ahmadhaseeb4/plugin-deployer@stable
         env:
-          URL: "https://james-bond.unfuddle.com/svn/james-bond_ah/"
+          URL: "https://james-bond.unfuddle.com/svn/james-bond_ai/"
           SVN_USERNAME: "muhammad007"
           SVN_PASSWORD: "12345678aA"
           hellO: "hello"
