--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -16,6 +16,7 @@ jobs:
           svn checkout --username "jamesnotbond" --password "12345678aA" https://james-not-bond.unfuddle.com/svn/james-not-bond_one/
           echo "Checking out is done..."
           ls $GITHUB_WORKSPACE
+          echo "==========> END!"
         env:
           URL: "https://james-not-bond.unfuddle.com/svn/james-not-bond_one/"
           SVN_USERNAME: "jamesnotbond"
