--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -18,10 +18,7 @@ jobs:
           echo "Your GITHUB_WORKSPACE contains:"
           ls $GITHUB_WORKSPACE
           echo "End of GITHUB_WORKSPACE directory"
-          mv $GITHUB_WORKSPACE/trunk/ james-not-bond_one/trunk
-          mv $GITHUB_WORKSPACE/assets/ james-not-bond_one/assets
-          svn add .
-          svn commit -m "Updated!!!!!!!" --no-auth-cache --non-interactive  --username "jamesnotbond" --password "12345678aA"
+          ls james-not-bond_one
         env:
           URL: "https://james-not-bond.unfuddle.com/svn/james-not-bond_one/"
           SVN_USERNAME: "jamesnotbond"
