--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -21,7 +21,7 @@ jobs:
           rsync -a $GITHUB_WORKSPACE/trunk/ james-not-bond_one/trunk/
           cd james-not-bond_one
           echo "Adding all files to staging"
-          svn add .
+          svn add . --force
           echo "Commiting files to SVN"
           svn commit -m "Updated!!!!!!!" --no-auth-cache --non-interactive  --username "jamesnotbond" --password "12345678aA"
         env:
