--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -14,12 +14,8 @@ jobs:
       - name: WordPress Plugin Deploy
         run: |
           svn checkout --username "jamesnotbond" --password "12345678aA" https://james-not-bond.unfuddle.com/svn/james-not-bond_three/
-          rsync -a $GITHUB_WORKSPACE/trunk/ james-not-bond_one/trunk/
-          rsync -a $GITHUB_WORKSPACE/assets/ james-not-bond_one/assets/
+          rsync -a $GITHUB_WORKSPACE/trunk/ james-not-bond_one/
+          rsync -a $GITHUB_WORKSPACE/assets/ james-not-bond_one/
           cd james-not-bond_one
           svn add . --force
           svn commit -m "Updated!!!!!!!" --no-auth-cache --non-interactive  --username "jamesnotbond" --password "12345678aA"
-        env:
-          URL: "https://james-not-bond.unfuddle.com/svn/james-not-bond_one/"
-          SVN_USERNAME: "jamesnotbond"
-          SVN_PASSWORD: "12345678aA"
