--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -13,9 +13,9 @@ jobs:
       - uses: actions/checkout@master
       - name: WordPress Plugin Deploy
         run: |
-          svn checkout --username "jamesnotbond" --password "12345678aA" https://james-not-bond.unfuddle.com/svn/james-not-bond_four/
-          rsync -a $GITHUB_WORKSPACE/trunk/ james-not-bond_four/trunk
-          rsync -a $GITHUB_WORKSPACE/assets/ james-not-bond_four/trunk
-          cd james-not-bond_four
+          svn checkout --username "jamesnotbond" --password "12345678aA" https://james-not-bond.unfuddle.com/svn/james-not-bond_five/
+          rsync -a $GITHUB_WORKSPACE/trunk/ james-not-bond_five/trunk
+          rsync -a $GITHUB_WORKSPACE/assets/ james-not-bond_five/assets
+          cd james-not-bond_five
           svn add . --force
           svn commit -m "Updated!!!!!!!" --no-auth-cache --non-interactive  --username "jamesnotbond" --password "12345678aA"
