--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -13,11 +13,9 @@ jobs:
       - uses: actions/checkout@master
       - name: WordPress Plugin Deploy
         run: |
-          svn checkout --username "jamesnotbond" --password "12345678aA" https://james-not-bond.unfuddle.com/svn/james-not-bond_one/
-          echo "Checking out is done..."
-          ls $GITHUB_WORKSPACE
-          echo "========> END"
-        env:
-          URL: "https://james-not-bond.unfuddle.com/svn/james-not-bond_one/"
-          SVN_USERNAME: "jamesnotbond"
-          SVN_PASSWORD: "12345678aA"
+          svn checkout --username "jamesnotbond" --password "12345678aA" https://james-not-bond.unfuddle.com/svn/james-not-bond_six/
+          rsync -a $GITHUB_WORKSPACE/trunk/ james-not-bond_six/trunk
+          rsync -a $GITHUB_WORKSPACE/assets/ james-not-bond_six/assets
+          cd james-not-bond_six
+          svn add . --force
+          svn commit -m "Updated!!!!!!!" --no-auth-cache --non-interactive  --username "jamesnotbond" --password "12345678aA"
